--- a/.gitignore
+++ b/.gitignore
@@ -109,6 +109,9 @@ web_modules/
 .env.production.local
 .env.local
 
+# Security key
+secret_key
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
